@@ -359,6 +359,7 @@ namespace bt
 		void updateStats();
 		void corrupted(Uint32 chunk);
 		void moveDataFilesFinished(KJob* j);
+		void moveToCompletedDir();
 		
 	private:	
 		void updateTracker(const QString & ev,bool last_succes = true);
@@ -386,6 +387,9 @@ namespace bt
 		
 		void setUploadProps(Uint32 limit,Uint32 rate);
 		void setDownloadProps(Uint32 limit,Uint32 rate);
+		
+	signals:
+		void dataCheckFinished();
 		
 	private:
 		Torrent* tor;
