@@ -10,6 +10,7 @@ Changes in 3.1.6 :
 - Backport initial logrotate showing progress info fix
 - Backport files get created in diskspace check fix
 - Backport file encoding fix
+- Backport fix for 177963 (move files after data check when torrent is complete fix)
 
 Changes in 3.1.5 :
 - Make sure symlinks work when we create multifile torrents
